<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/textView_linear"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView_register_title"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:background="@color/darkblue"
            android:gravity="center_horizontal"
            android:text="@string/rapid"
            android:textColor="@color/white"
            android:textSize="30sp"
          />
    </LinearLayout>
    
    <ScrollView
        android:id="@+id/scroll1"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_below="@+id/textView_linear"
         >
    
    <RelativeLayout
        android:id="@+id/mainRel"
        android:layout_height="match_parent"
        android:layout_width="fill_parent"
		android:layout_below="@+id/textView_linear"
		>
    
    <TextView
        android:id="@+id/textView_lebelriderres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/rider_res"
        android:textColor="@color/white"
       	android:layout_centerHorizontal="true"
    	android:textSize="25sp"
         />
    
    <RelativeLayout
        android:id="@+id/rel1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_lebelriderres"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/border"
          >
        
     <ImageView
             android:id="@+id/imageView_reg_profilepic"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_alignParentLeft="true"
         	 android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:src="@drawable/upload_icon" />
     
          <EditText
         android:id="@+id/editText_reg_userfirstname"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/editText_reg_userlastname"
         android:layout_alignTop="@+id/imageView_reg_profilepic"
         android:layout_marginTop="15dp"
         android:layout_marginRight="10dp"
         android:background="@drawable/corner_round"
         android:ems="10"
         android:hint="@string/userfirstname1"
         android:inputType="textPersonName"
         android:paddingLeft="5dp"
         android:paddingRight="5dp" >

         <requestFocus />
     </EditText>
    
     <EditText
                        android:id="@+id/editText_reg_userlastname"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                    	android:layout_toRightOf="@+id/imageView_reg_profilepic"
                    	android:layout_below="@+id/editText_reg_userfirstname"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/corner_round"
                        android:ems="10"
                        android:hint="@string/userlastname"
                        android:inputType="textPersonName"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        />

          <EditText
                    android:id="@+id/editText_reg_email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editText_reg_userlastname"
              		android:layout_marginLeft="10sp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="15dp"
            		android:background="@drawable/corner_round"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    
                     />
          
                   <EditText
                    android:id="@+id/editText_reg_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/corner_round"
                    android:ems="10"
                    android:layout_below="@+id/editText_reg_email"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                     />
                   
              <EditText
                    android:id="@+id/editText_reg_confirmpassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editText_reg_password"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/corner_round"
                    android:ems="10"
                    android:hint="@string/confirm_pass"
                    android:inputType="textPassword"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    
                     />
              
                <EditText
                    android:id="@+id/editText_reg_contactnumber"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editText_reg_confirmpassword"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/corner_round"
                    android:ems="10"
                    android:hint="@string/contactno"
                    android:inputType="number"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                     />
               <Button
                    android:id="@+id/button_reg_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                  	android:layout_below="@+id/editText_reg_contactnumber"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/transparent"
                    android:text="REGISTER"
                    android:layout_centerHorizontal="true"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                     />

    </RelativeLayout>
    
        <TextView
                android:id="@+id/textView_alreay_haveRegis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rel1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="Already have an account ??"
                android:textColor="@color/white"
                 />
        
           <TextView
                android:id="@+id/textView_loginhere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="Login here"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginBottom="50dp"
               	android:layout_below="@+id/textView_alreay_haveRegis" />
    </RelativeLayout>       
</ScrollView>
</RelativeLayout>
